Correct hoverflow x hidden y auto

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -26,12 +26,12 @@
     height: 100%;
     margin-left: -250px;
     overflow-y: auto;
+    overflow-x: hidden !important;
     background-color: rgba(229, 232, 232, 0.32);
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
-    overflow: hidden !important;
 }
 
 #wrapper.toggled #sidebar-wrapper {
